* Add white gradient background to price wrapper (fixes overlapping)

--- a/public_html/includes/templates/default.catalog/less/app/listing.less
+++ b/public_html/includes/templates/default.catalog/less/app/listing.less
@@ -143,6 +143,8 @@
       padding: 0 @default-gutter-size;
       line-height: @default-gutter-size * 3;
       font-size: 1.25em;
+      background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 20%,rgba(255,255,255,1) 100%);
+      padding-left: @default-gutter-size * 2;
       .price {
         font-weight: bold;
         color: #333;
